Added support for JWT Authentication Delegation. Added the class **GoogleCaptchaService**.